deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hexalith-pages-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: eventstore.hexalith.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventstore-admin-ui
                port:
                  number: 8080
    - host: sample.hexalith.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-blazor-ui
                port:
                  number: 8080
  tls:
    - hosts:
        - eventstore.hexalith.com
        - sample.hexalith.com
      secretName: hexalith-pages-tls
